--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,7 @@
 {
   "appTitle": "Aero Cast",
   "dailySummary": "Daily summary",
-  "forcast": "Forcast",
+  "forecast": "Forecast",
   "background": "Background",
   "wind": "Wind",
   "humidity":"Humidity",
