--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,7 +1,7 @@
 {
   "appTitle": "Aero Cast",
   "dailySummary": "Resumen diario",
-  "forcast": "Pronosticar",
+  "forecast": "Pronosticar",
   "background": "Fondo",
   "wind": "Viento",
   "humidity": "Humedad",
